crates/magi-bridge-client/tests/snapshots/round_policy_snapshots__snapshot_continue_prompt_with_progress.snap
---
source: crates/magi-bridge-client/tests/round_policy_snapshots.rs
expression: build_continue_prompt(&snap)
---
[System] 当前任务未满足终止条件，请继续推进。
- 必需任务总数: 5
- 已终态必需任务: 2
- 剩余必需任务: 3
- 未解决阻塞: 1
- 请优先处理关键路径上的未完成项，避免重复只读探索。

- 示例 ✅: 直接锁定第一个未完成必需任务，调用关键路径上未尝试过的工具
- 示例 ✅: 阻塞已识别 → 输出失败 OUTCOME 块并写清楚阻塞点
- 示例 ❌: "让我先整体看一下情况" + 又一次 ls/grep — 重复只读探索，已被禁止
- 示例 ❌: 跳过未完成任务直接收尾 — 必需任务未终态时禁止输出 status=completed
