crates/magi-bridge-client/tests/snapshots/round_policy_snapshots__snapshot_outcome_block_request_prompt.snap
---
source: crates/magi-bridge-client/tests/round_policy_snapshots.rs
expression: build_outcome_block_request_prompt()
---
[System] 为保证续航与终止判定一致性，请在输出末尾追加控制块：
[[EXECUTION_OUTCOME]]
{"status":"running|completed|failed","next_steps":["..."]}
[[/EXECUTION_OUTCOME]]
- 仅输出 JSON，不要额外解释。

- 示例 ✅: 在正文结论后另起一行，原样粘贴控制块（含起止标记），其中 JSON 是合法的紧凑形式
- 示例 ❌: "下面是状态：[[EXECUTION_OUTCOME]]{...}[[/EXECUTION_OUTCOME]] 如有问题告诉我" — 控制块周围禁止额外解释
- 示例 ❌: status 取了枚举外的值（如 "in_progress" / "pending"）— 仅允许 running / completed / failed
- 示例 ❌: 忘记 next_steps 字段或写成对象 — 必须是字符串数组
