crates/magi-bridge-client/tests/snapshots/round_policy_snapshots__snapshot_summary_hijack_correction_level2.snap
---
source: crates/magi-bridge-client/tests/round_policy_snapshots.rs
expression: correction.prompt
---
[System] 再次检测到摘要劫持。下一轮禁止工具调用。请仅输出当前任务的具体执行结论与下一步动作，不要输出总结模板。

- 示例 ✅: "我已修复 src/login.tsx 第 42 行的 null 解引用，下一步要验证登录流"
- 示例 ❌: 再次输出 <analysis>/<summary> 模板或"对话总结"
- 示例 ❌: 继续调用工具 — 下一轮已强制禁用
